fixed view on mobile

--- a/src/Pages/BondsPage/styles.module.scss
+++ b/src/Pages/BondsPage/styles.module.scss
@@ -20,6 +20,10 @@
     align-items: center;
     gap: 10px;
     margin-bottom: 10px;
+
+    @include phone {
+          flex-wrap: wrap;
+    }
   }
   &__item,
   &__risk {
